--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Stefano Chiodino <louderth@gmail.com>"]
 
 [dependencies]
+reqwest = "0.6.2"
+serde = "1.0.8"
+serde_derive = "1.0.8"
+serde_json = "1.0.2"
